--- a/index.html
+++ b/index.html
@@ -21,6 +21,62 @@
             </ul>
         </div>
     </div>
+    <div></div>
+    <div class="section4">
+        <div class="main_block">
+        <h1>Brightum Technology </h1>
+        <p>The youth-boosting essence crystalized by decades of advances in marine glycobiology.
+            Brightum features potent bioactive blending of 3 uniquely-harvested marine polysaccharides.
+            A healthier skin begins with just one touch. See more hydrated, radiant, smooth, even-toned and supple skin.
+            Fine lines and wrinkles are softened. </p>
+        <img class="video">
+        </div>
+        <div class="first_block">
+            <h1><span>1</span>Hydrolytic Oligosaccharides</h1>
+            <p>Inspired by a unique symbiosis between Gigartina seaweed and its co-habited microbes,
+                a unique hydrolytic process is created to
+                produce one-of-a-kind oligosaccharides from Gigartina seaweed extract.</p>
+            <ul>
+                <li>Boost skin cell renewal process;</li>
+                <li>Improve skin’s water preservation function;</li>
+                <li>Deliver a soothing and softening effect from inside to outside;</li>
+            </ul>
+            <div>
+                <img>
+                <p>Oligosaccharides (up) retrieved from a unique marine microbe (low right) – based hydrolytic process of Atlantic Ocean Gigartina seaweed (low left) extract. </p>
+            </div>
+        </div>
+        <div class="second_block">
+            <h1><span>1</span>Hydrolytic Oligosaccharides</h1>
+            <p>Inspired by a unique symbiosis between Gigartina seaweed and its co-habited microbes,
+                a unique hydrolytic process is created to
+                produce one-of-a-kind oligosaccharides from Gigartina seaweed extract.</p>
+            <ul>
+                <li>Boost skin cell renewal process;</li>
+                <li>Improve skin’s water preservation function;</li>
+                <li>Deliver a soothing and softening effect from inside to outside;</li>
+            </ul>
+            <div>
+                <img>
+                <p>Oligosaccharides (up) retrieved from a unique marine microbe (low right) – based hydrolytic process of Atlantic Ocean Gigartina seaweed (low left) extract. </p>
+            </div>
+        </div>
+        <div class="third_block">
+            <h1><span>1</span>Hydrolytic Oligosaccharides</h1>
+            <p>Inspired by a unique symbiosis between Gigartina seaweed and its co-habited microbes,
+                a unique hydrolytic process is created to
+                produce one-of-a-kind oligosaccharides from Gigartina seaweed extract.</p>
+            <ul>
+                <li>Boost skin cell renewal process;</li>
+                <li>Improve skin’s water preservation function;</li>
+                <li>Deliver a soothing and softening effect from inside to outside;</li>
+            </ul>
+            <div>
+                <img>
+                <p>Oligosaccharides (up) retrieved from a unique marine microbe (low right) – based hydrolytic process of Atlantic Ocean Gigartina seaweed (low left) extract. </p>
+            </div>
+        </div>
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
