--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         <img class="video">
         </div>
         <div class="first_block">
-            <h1><span>1</span>Hydrolytic Oligosaccharides</h1>
+
+            <h1> <span>1</span>Hydrolytic Oligosaccharides</h1>
             <p>Inspired by a unique symbiosis between Gigartina seaweed and its co-habited microbes,
                 a unique hydrolytic process is created to
                 produce one-of-a-kind oligosaccharides from Gigartina seaweed extract.</p>
@@ -65,33 +66,18 @@
             </div>
         </div>
         <div class="second_block">
-            <h1><span>1</span>Hydrolytic Oligosaccharides</h1>
-            <p>Inspired by a unique symbiosis between Gigartina seaweed and its co-habited microbes,
-                a unique hydrolytic process is created to
-                produce one-of-a-kind oligosaccharides from Gigartina seaweed extract.</p>
+            <h1><span>2</span>HMW Fucoidan Complexes </h1>
+            <p>By using a unique lixiviation process, stable,
+                bioactive and marine antioxidant – bounded high molecular weight (HMW)
+                fucoidans are extracted from Ascophyllum seaweed. </p>
             <ul>
-                <li>Boost skin cell renewal process;</li>
-                <li>Improve skin’s water preservation function;</li>
-                <li>Deliver a soothing and softening effect from inside to outside;</li>
+                <li>Reduce tyrosinase activity;</li>
+                <li>Enhance skin clarity;</li>
+                <li>Reduce skin pigmentation; </li>
             </ul>
             <div>
                 <img>
-                <p>Oligosaccharides (up) retrieved from a unique marine microbe (low right) – based hydrolytic process of Atlantic Ocean Gigartina seaweed (low left) extract. </p>
-            </div>
-        </div>
-        <div class="third_block">
-            <h1><span>1</span>Hydrolytic Oligosaccharides</h1>
-            <p>Inspired by a unique symbiosis between Gigartina seaweed and its co-habited microbes,
-                a unique hydrolytic process is created to
-                produce one-of-a-kind oligosaccharides from Gigartina seaweed extract.</p>
-            <ul>
-                <li>Boost skin cell renewal process;</li>
-                <li>Improve skin’s water preservation function;</li>
-                <li>Deliver a soothing and softening effect from inside to outside;</li>
-            </ul>
-            <div>
-                <img>
-                <p>Oligosaccharides (up) retrieved from a unique marine microbe (low right) – based hydrolytic process of Atlantic Ocean Gigartina seaweed (low left) extract. </p>
+                <p>High molecular weight fucoidan complexes (up) extracted from Ascophyllum seaweed (low) of Atlantic Ocean.</p>
             </div>
         </div>
     </div>
