--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </header>
     <div class="section-1">
-        
+        <div class="facial-sheet-img"></div>
     </div>
     <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
