Changing text effect

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li class="menu-separator"></li>
                 <li><a href="#">Shop<span class="icon bag-icon"></span></a></li>
                 <li class="menu-separator"></li>
-                <li><a href="#" class="dropdown-btn">Like Us<span class="icon heart-icon"></span></a></li>
+                <li><a class="dropdown-btn">Like Us<span class="icon heart-icon"></span></a></li>
             </ul>
             <div class="dropdown-content">
                 <div class="dropdown-content-share-it">
@@ -40,6 +40,14 @@
         </div>
     </header>
     <div class="section-1">
+        <div class="section-1-text">
+            <div>
+                A semen facial maybe a <br><span class="myth-word">myth</span> ...
+            </div>
+            <div>
+                FaceSemen is definitely <br>not one.
+            </div>
+        </div>
         <div class="facial-sheet-img"></div>
     </div>
     <div></div>
@@ -88,6 +96,7 @@
     src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
+    <script src="js/jquery.cycle.lite.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
