Section 2 implementing started

--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
         </div>
         <div class="facial-sheet-img"></div>
     </div>
+    <div class="section-2">
+        <div class="facial-sheet-with-circles-img"></div>
+        <div class="section-2-text">
+            <h2>FaceSemen</h2>
+            <p>A youth-boosting miracle, created by curiosity, courage, and never obeys the ordinary. FaceSemen is born as the essence of creativity, a truly innovative treatment that revives, rejuvenates and revitalizes. The craft of science, the step of transformation and the ritual of beauty, FaceSemen is multi-dimension with a single goal — creating a new life for the skin. </p>
+        </div>
+        <div class="bubble">Improves skin hydration</div>
+        <div class="bubble">Improves skin hydration</div>
+    </div>
     <div></div>
     <div class="section4">
         <div class="main_block">
