--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <title>Face Semen</title>    
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 </head>
 <body>
     <header>
@@ -42,10 +44,10 @@
     <div class="section-1">
         <div class="section-1-text">
             <div>
-                A semen facial maybe a <br><span class="myth-word">myth</span> ...
+                A semen facial maybe a <br><span class="selected-words">myth</span> ...
             </div>
             <div>
-                FaceSemen is definitely <br>not one.
+                FaceSemen is definitely <br><span class="selected-words">not one</span>.
             </div>
         </div>
         <div class="facial-sheet-img"></div>
@@ -56,10 +58,66 @@
             <h2>FaceSemen</h2>
             <p>A youth-boosting miracle, created by curiosity, courage, and never obeys the ordinary. FaceSemen is born as the essence of creativity, a truly innovative treatment that revives, rejuvenates and revitalizes. The craft of science, the step of transformation and the ritual of beauty, FaceSemen is multi-dimension with a single goal — creating a new life for the skin. </p>
         </div>
-        <div class="bubble">Improves skin hydration</div>
-        <div class="bubble">Improves skin hydration</div>
+        <div class="bubble bubble_1"></div>
+        <div class="bubble bubble_2"></div>
+        <div class="bubble bubble_3"></div>
+        <div class="bubble bubble_4"></div>
+        <div class="bubble bubble_5"></div>
+        <div class="bubble bubble_6"></div>
+        <div class="bubble bubble_7"></div>
+        <div class="bubble bubble_8"></div>
+        <div class="bubble bubble_9"></div>
     </div>
-    <div></div>
+    <div class="section-3">
+        <h2>FaceSemen Facial Treatment Mask</h2>
+        <p>A different facial sheet masking experience that is more than just putting it on and taking it off. Your skin knows and you know.</p>
+        <div class="section-3-content">
+            <div class="facial-sheet-on-board-img"></div>
+            <div class="slider">
+                <div class="slide">
+                    <div class="slide-header">
+                        <span class="slide-number">1</span>
+                        <div class="slide-title">Created with an eye towards future innovation</div>
+                    </div>
+                    <div class="slide-img slide1-img"></div>
+                    <div class="slide-description">This simple design reflects the mission to blend science with creativity and produce every innovation that stand the test of time, not only this facial treatment mask, but also future ones. It is a preview of FaceSemen’s future anti-aging technology which is on its way.</div>
+                    <a class="discover-btn" href="#"><span class="discover-icon"></span>Discover</a>
+                </div> 
+                <div class="slide">
+                    <div class="slide-header">
+                        <span class="slide-number">2</span>
+                        <div class="slide-title">A powerful serum that works</div>
+                    </div>
+                    <div class="slide-img slide2-img"></div>
+                    <div class="slide-description">The FaceSemen serum is fully infused with powerful Brightum Technology. Saturated with millions of uniquely-extracted marine-derived bioactive molecules, FaceSemen is an ultimate age-defying solution. Your skin loves it, you too.</div>
+                </div>
+                <div class="slide">
+                    <div class="slide-header">
+                        <span class="slide-number">3</span>
+                        <div class="slide-title">A comfortable sheet mask that skin loves</div>
+                    </div>
+                    <div class="slide-img slide3-img"></div>
+                    <div class="slide-description">Softer than silk and more breathable than cotton, the facial sheet is friendly to every skin type. Plus, the great affinity makes it so easy to adhere to the face. It is made by thousands of microfibers that absorb and releases more serum. It is all natural and 100% biodegradable.</div>
+                </div>
+                <div class="slide">
+                    <div class="slide-header">
+                        <span class="slide-number">4</span>
+                        <div class="slide-title">With more than enough serum</div>
+                    </div>
+                    <div class="slide-img slide4-img"></div>
+                    <div class="slide-description">Each mask is infused with more than sufficient FaceSemen. Your skin deserves a complete and nourishing bath. You may want to save excess for a booster treatment thereafter.</div>
+                </div>
+                <div class="slide">
+                    <div class="slide-header">
+                        <span class="slide-number">5</span>
+                        <div class="slide-title">Fun, at occasions</div>
+                    </div>
+                    <div class="slide-img slide5-img"></div>
+                    <div class="slide-description">Curiosity about that baby-making liquid may jump out at some point. You may now wonder what FaceSemen could be? Not only you, your surroundings too.</div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="section4">
         <div class="main_block">
         <h1>Brightum Technology </h1>
@@ -101,11 +159,9 @@
             </div>
         </div>
     </div>
-    <script
-    src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
+    <script src="js/jquery-1.11.0.min.js"></script>
     <script src="js/jquery.cycle.lite.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
