--- a/index.html
+++ b/index.html
@@ -120,42 +120,103 @@
     </div>
     <div class="section4">
         <div class="main_block">
-        <h1>Brightum Technology </h1>
-        <p>The youth-boosting essence crystalized by decades of advances in marine glycobiology.
-            Brightum features potent bioactive blending of 3 uniquely-harvested marine polysaccharides.
-            A healthier skin begins with just one touch. See more hydrated, radiant, smooth, even-toned and supple skin.
-            Fine lines and wrinkles are softened. </p>
-        <img class="video">
+            <div style="width: 45vw">
+                <h1>Brightum Technology </h1>
+                <p>The youth-boosting essence crystalized by decades of advances in marine glycobiology.
+                    Brightum features potent bioactive blending of 3 uniquely-harvested marine polysaccharides.
+                    A healthier skin begins with just one touch. See more hydrated, radiant, smooth, even-toned and supple
+                    skin.
+                    Fine lines and wrinkles are softened. </p>
+                <div style="height: 7vw;width:55vw;" class="single-item">
+                    <div class="info"><img src="img/secondInfo.png"><span>Epidermis renewal doubled in just <em>4</em> days*</span>
+                    </div>
+                    <div class="info"><img
+                            src="img/3info.png"><span><em>95%</em> observed improvement of skin hydration*</span></div>
+                    <div class="info"><img
+                            src="img/firstInfo.png"><span><em>88%</em> observed increase of skin clarity*</span></div>
+                    <div class="info"><img src="img/5info.png"><span><em>75%</em> observed visibly softer skin*</span></div>
+                    <div class="info"><img
+                            src="img/6info.png"><span><em>70%</em> observed improvement to deep wrinkles*</span></div>
+                    <div class="info"><img
+                            src="img/7info.png"><span><em>63%</em> observed decrease of skin pigmentation*</span></div>
+                </div>
+            </div>
+            <div class="videocontainer">
+                <video class="video" width="300px" height="300px" loop poster="img/poster.png">
+                    <source src="img/demo.mp4" type='video/ogg; codecs="theora, vorbis"'>
+                </video>
+            </div>
         </div>
         <div class="first_block">
-
-            <h1> <span>1</span>Hydrolytic Oligosaccharides</h1>
-            <p>Inspired by a unique symbiosis between Gigartina seaweed and its co-habited microbes,
-                a unique hydrolytic process is created to
-                produce one-of-a-kind oligosaccharides from Gigartina seaweed extract.</p>
-            <ul>
-                <li>Boost skin cell renewal process;</li>
-                <li>Improve skin’s water preservation function;</li>
-                <li>Deliver a soothing and softening effect from inside to outside;</li>
-            </ul>
-            <div>
-                <img>
-                <p>Oligosaccharides (up) retrieved from a unique marine microbe (low right) – based hydrolytic process of Atlantic Ocean Gigartina seaweed (low left) extract. </p>
+            <div class="content_block">
+                <h1><span>1</span>Hydrolytic Oligosaccharides</h1>
+                <p>Inspired by a unique symbiosis between Gigartina seaweed and its co-habited microbes,
+                    a unique hydrolytic process is created to
+                    produce one-of-a-kind oligosaccharides from Gigartina seaweed extract.</p>
+                <br>
+                <hr>
+                <ul>
+                    <li>Boost skin cell renewal process;</li>
+                    <li>Improve skin’s water preservation function;</li>
+                    <li>Deliver a soothing and softening effect from inside to outside;</li>
+                </ul>
+            </div>
+            <div class="section_content">
+                <img src="img/ts.png">
+                <p>Oligosaccharides (up) retrieved from a unique marine microbe (low right) – based hydrolytic process of
+                    Atlantic Ocean Gigartina seaweed (low left) extract. </p>
+                <div class="circle">
+                <img src="img/2.png"/>
+                <img src="img/1.png"/>
+                </div>
             </div>
         </div>
         <div class="second_block">
-            <h1><span>2</span>HMW Fucoidan Complexes </h1>
-            <p>By using a unique lixiviation process, stable,
-                bioactive and marine antioxidant – bounded high molecular weight (HMW)
-                fucoidans are extracted from Ascophyllum seaweed. </p>
-            <ul>
-                <li>Reduce tyrosinase activity;</li>
-                <li>Enhance skin clarity;</li>
-                <li>Reduce skin pigmentation; </li>
-            </ul>
-            <div>
-                <img>
-                <p>High molecular weight fucoidan complexes (up) extracted from Ascophyllum seaweed (low) of Atlantic Ocean.</p>
+            <div class="content_block2">
+                <h1><span>2</span>HMW Fucoidan Complexes </h1>
+                <p>By using a unique lixiviation process, stable,
+                    bioactive and marine antioxidant – bounded high molecular weight (HMW)
+                    fucoidans are extracted from Ascophyllum seaweed. </p>
+                <br>
+                <hr>
+                <ul>
+                    <li>Reduce tyrosinase activity;</li>
+                    <li>Enhance skin clarity;</li>
+                    <li>Reduce skin pigmentation;</li>
+                </ul>
+            </div>
+            <div class="section_content">
+                <img src="img/sec1png2.png">
+                <p>High molecular weight fucoidan complexes (up) extracted from Ascophyllum seaweed (low) of Atlantic
+                    Ocean.</p>
+                <div class="circle">
+                    <img src="img/4.png">
+                </div>
+            </div>
+        </div>
+        <div class="third_block">
+            <div class="content_block">
+                <h1><span>3</span>Highly Sulfated Oligo-fucoidans</h1>
+                <p>The anti-aging benefit of fucoidans is directly related to the degree of their sulfate content.
+                    Unlike fucoidan extracted from other seaweeds, fucoidan extracted from Laminaria (Kelp) in the Iroise
+                    sea is uniquely enriched with sulfate content.
+                    By using a unique extraction process, highly sulfated oligo-fucoidans are obtained. </p>
+                <br>
+                <hr>
+                <ul>
+                    <li>Promote skin fibroblast growth;</li>
+                    <li>Stimulate collagen production;</li>
+                    <li>Soften wrinkle and fine lines from inside to outside;</li>
+                </ul>
+            </div>
+            <div class="section_content">
+                <img src="img/t.png">
+                <p>High molecular weight fucoidan complexes (up) extracted from Ascophyllum seaweed (low) of Atlantic
+                    Ocean.</p>
+                <div class="circle">
+                    <br>
+                    <img src="img/6.png">
+                </div>
             </div>
         </div>
     </div>
